# Discontinuity

./: .gitignore  CMakeLists.txt  README.md  post_process.py
src/: main.cpp  riemann.cpp  riemann.h  solver.cpp  solver.h  tests.cpp
tests/: test_1.txt  test_2.txt  test_3.txt
